<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_white">

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/space"
        android:paddingStart="15dp"
        android:paddingTop="13dp"
        android:paddingEnd="15dp"
        android:paddingBottom="13dp"
        android:src="@mipmap/common_ic_back" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginStart="85dp"
        android:src="@mipmap/user_bg_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_hi"
            android:textColor="@color/common_main_black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_welcome"
            android:textColor="@color/common_main_black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/tv_sms_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:text="@string/user_sms_code_login"
                android:textColor="@color/common_main_gray"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/tv_pwd_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:button="@null"
                android:text="@string/user_password_login"
                android:textColor="@color/common_main_gray"
                android:textSize="16sp" />

        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="30dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/user_input_phone_hint"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/common_main_black"
            android:textColorHint="@color/common_edit_hint"
            android:textCursorDrawable="@drawable/common_ic_cursor"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/common_dividing_line_1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="30dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/user_input_sms_code_hint"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/common_main_black"
            android:textColorHint="@color/common_edit_hint"
            android:textCursorDrawable="@drawable/common_ic_cursor"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/common_dividing_line_1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/common_bg_main_blue_btn"
            android:text="@string/user_login"
            android:textColor="@color/common_white"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/check_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:button="@drawable/common_ic_check"
            android:paddingStart="10dp"
            android:text="@string/user_protocol"
            android:textColor="@color/common_sub_gray"
            android:textSize="11sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/user_other_login_type"
            android:textColor="@color/common_main_gray"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="60dp"
            android:src="@mipmap/user_ic_wechat" />

    </LinearLayout>

</RelativeLayout>